--- a/plugin-name/package.json
+++ b/plugin-name/package.json
@@ -24,10 +24,15 @@
 		"js:unminified": "for f in $npm_package_assets_js_src**/*.js; do relative=$(realpath --relative-to=\"$npm_package_assets_js_src\" \"$f\"); file=${f%.js}; mkdir -p \"${npm_package_assets_js_out}$(dirname $relative)\"; cp -f \"$f\" \"${npm_package_assets_js_out}${relative}\"; done",
 		"js:minified": "for f in $npm_package_assets_js_out**/*.js; do relative=$(realpath --relative-to=\"$npm_package_assets_js_out\" \"$f\"); file=\"${npm_package_assets_js_out}${relative}\"; file=\"${file%.js}\"; uglifyjs $f -c -m --output $file.min.js; done",
 		"blocks": "if [ -f \"block.json\" ]; then wp-scripts build; fi;",
+		"watch": "concurrently \"npm:watch:*\"",
+		"watch:css": "chokidar \"${npm_package_assets_css_src}**/*.scss\" -c \"npm run sass\"",
+		"watch:js": "chokidar \"${npm_package_assets_js_src}**/*.js\" -c \"npm run js\"",
 		"build": "npm run sass && npm run js && npm run blocks"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.2.5",
+		"chokidar-cli": "^2.1.0",
+		"concurrently": "^6.0.2",
 		"postcss": "^8.2.14",
 		"postcss-clean": "^1.2.2",
 		"postcss-cli": "^8.3.1",
