Add browsersync support, and compatibility with monorepo.

--- a/plugin-name/package.json
+++ b/plugin-name/package.json
@@ -26,8 +26,11 @@
 		"build": "concurrently \"npm:sass\" \"npm:js\"",
 		"watch": "concurrently \"npm:watch:*\"",
 		"watch:css": "chokidar \"${npm_package_assets_css_src}**/*.scss\" -c \"npm run sass\"",
-		"watch:js": "chokidar \"${npm_package_assets_js_src}**/*.js\" -c \"npm run js\""
+		"watch:js": "chokidar \"${npm_package_assets_js_src}**/*.js\" -c \"npm run js\"",
+		"browsersync:list": "echo \"$(pwd)/${npm_package_assets_css_out}**/*.css, $(pwd)/${npm_package_assets_js_out}**/*.js\"",
+		"browsersync:serve": "browser-sync start --no-open --proxy \"$npm_package_domain\" --files \"$(npm run browsersync:list --silent)\""
 	},
+	"domain": "local.test",
 	"devDependencies": {
 		"autoprefixer": "^10.2.5",
 		"chokidar-cli": "^2.1.0",
