--- a/plugin-name/package.json
+++ b/plugin-name/package.json
@@ -12,7 +12,8 @@
 		"css": {
 			"src": "assets/source/sass/",
 			"out": "assets/css/"
-		}
+		},
+		"pot": "i18n/languages"
 	},
 	"scripts": {
 		"presass": "rm -rf \"${npm_package_assets_css_out}\"",
@@ -23,7 +24,9 @@
 		"js": "npm run js:unminified && npm run js:minified",
 		"js:unminified": "for f in $npm_package_assets_js_src**/*.js; do relative=$(realpath --relative-to=\"$npm_package_assets_js_src\" \"$f\"); file=${f%.js}; mkdir -p \"${npm_package_assets_js_out}$(dirname $relative)\"; cp -f \"$f\" \"${npm_package_assets_js_out}${relative}\"; done",
 		"js:minified": "for f in $npm_package_assets_js_out**/*.js; do relative=$(realpath --relative-to=\"$npm_package_assets_js_out\" \"$f\"); file=\"${npm_package_assets_js_out}${relative}\"; file=\"${file%.js}\"; uglifyjs $f -c -m --output $file.min.js; done",
-		"build": "concurrently \"npm:sass\" \"npm:js\"",
+		"pretranslate": "rm -rf \"${npm_package_assets_pot}\"",
+		"translate": "wpi18n makepot --domain-path \"${npm_package_assets_pot}\" --pot-file plugin-name.pot --type plugin --main-file plugin-name.php --exclude node_modules,tests,docs,docker",
+		"build": "concurrently \"npm:sass\" \"npm:js\" \"npm:translate\"",
 		"watch": "concurrently \"npm:watch:*\"",
 		"watch:css": "chokidar \"${npm_package_assets_css_src}**/*.scss\" -c \"npm run sass\"",
 		"watch:js": "chokidar \"${npm_package_assets_js_src}**/*.js\" -c \"npm run js\"",
@@ -35,6 +38,7 @@
 		"autoprefixer": "^10.2.5",
 		"chokidar-cli": "^2.1.0",
 		"concurrently": "^6.0.2",
+		"node-wp-i18n": "^1.2.5",
 		"postcss": "^8.2.14",
 		"postcss-clean": "^1.2.2",
 		"postcss-cli": "^8.3.1",
