--- a/plugin-name/package.json
+++ b/plugin-name/package.json
@@ -51,6 +51,12 @@
 		"sass": "^1.32.12",
 		"uglify-js": "^3.13.5"
 	},
+	"browserslist": [
+		"last 5 versions",
+		"> 1%",
+		"maintained node versions",
+		"not dead"
+	],
 	"eslintConfig": {
 		"extends": [
 			"plugin:@wordpress/eslint-plugin/es5"
